--- a/src/App.scss
+++ b/src/App.scss
@@ -1,25 +1,44 @@
+// General page content
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+
+// App content
 .app {
+    
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: .25rem;
+    gap: .3rem;
+    color: white;
+    background-color: rgb(28, 28, 28);
 }
 
 .tile_row {
     display: flex;
-    gap: .25rem;
+    gap: .3rem;
 }
 
 .tile {
-    background-color: rgb(217, 217, 217);
-    width: 40px;
-    height: 40px;
+    background-color: rgb(31, 31, 31);
+    width: 3.75rem;
+    height: 3.75rem;
     display: flex;
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    font-weight: bold;
+    border: .05rem solid rgb(112, 112, 112);
 }
 
 .green {
@@ -31,5 +50,5 @@
 }
 
 .grey {
-    background-color: grey;
+    background-color: rgb(56, 56, 56);
 }
