--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,24 @@ html, body {
     font-size: 2rem;
     font-weight: bold;
     border: .05rem solid rgb(112, 112, 112);
+    transition: all .75s ease-in-out;
+
+    &.flip {
+        rotate: x 180deg;
+        transform-style: preserve-3d;
+    }
+
+    &.shake {
+        @keyframes shake {
+            16% {scale: .95;}
+            32% {rotate: z 4deg; scale: .95;}
+            48% {rotate: z -8deg; scale: .9; }
+            65% {rotate: z 4deg; scale: .95;}
+            82% {rotate: z -8deg; scale: .925; }
+            100% {rotate: z 4deg; scale: 1;}
+        }
+        animation: shake .5s linear alternate-reverse;
+    }
 }
 
 .green {
