--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
 }
@@ -11,16 +12,24 @@ html, body {
 
 // App content
 .app {
-    
+
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: .3rem;
+    justify-content: space-evenly;
+    //gap: .3rem;
     color: white;
     background-color: rgb(28, 28, 28);
+}
+
+.gameboard_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .3rem;
 }
 
 .tile_row {
@@ -46,13 +55,36 @@ html, body {
 
     &.shake {
         @keyframes shake {
-            16% {scale: .95;}
-            32% {rotate: z 4deg; scale: .95;}
-            48% {rotate: z -8deg; scale: .9; }
-            65% {rotate: z 4deg; scale: .95;}
-            82% {rotate: z -8deg; scale: .925; }
-            100% {rotate: z 4deg; scale: 1;}
+            16% {
+                scale: .95;
+            }
+
+            32% {
+                rotate: z 4deg;
+                scale: .95;
+            }
+
+            48% {
+                rotate: z -8deg;
+                scale: .9;
+            }
+
+            65% {
+                rotate: z 4deg;
+                scale: .95;
+            }
+
+            82% {
+                rotate: z -8deg;
+                scale: .925;
+            }
+
+            100% {
+                rotate: z 4deg;
+                scale: 1;
+            }
         }
+
         animation: shake .5s linear alternate-reverse;
     }
 }
@@ -71,11 +103,18 @@ html, body {
             height: 100%;
             z-index: 2;
             background-color: inherit;
-    
+
             @keyframes flip {
-                0% {opacity: 0; background-color: inherit;}
-                100% {opacity: 1; rotate: x 180deg;}
+                0% {
+                    opacity: 0;
+                }
+
+                100% {
+                    opacity: 1;
+                    rotate: x 180deg;
+                }
             }
+
             animation: flip 1s ease;
             background-color: green;
         }
@@ -95,12 +134,19 @@ html, body {
             width: 100%;
             height: 100%;
             z-index: 2;
-    
+
             @keyframes flip {
-                0% {scale: 1;}
-                100% {rotate: x 180deg;}
+                0% {
+                    opacity: 0;
+                }
+
+                100% {
+                    opacity: 1;
+                    rotate: x 180deg;
+                }
             }
-            animation: flip 1s ease 0s;
+
+            animation: flip 1s ease;
             background-color: yellow;
         }
     }
@@ -108,7 +154,7 @@ html, body {
 
 .grey {
     position: relative;
-    
+
     &.flip {
 
         &::before {
@@ -119,13 +165,55 @@ html, body {
             width: 100%;
             height: 100%;
             z-index: 2;
-    
+
             @keyframes flip {
-                0% {scale: 1;}
-                100% {rotate: x 180deg;}
+                0% {
+                    opacity: 0;
+                }
+
+                100% {
+                    opacity: 1;
+                    rotate: x 180deg;
+                }
             }
+
             animation: flip 1s ease 0s;
             background-color: grey;
+        }
+    }
+}
+
+
+.keyboard_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+
+    .keyboard_row {
+        display: flex;
+        gap: .4rem;
+
+        p {
+            margin: 0;
+            padding: 1.15rem 1rem;
+            background-color: rgb(206, 206, 206);
+            border-radius: .25rem;
+            text-transform: uppercase;
+            font-size: 1rem;
+            cursor: pointer;
+
+            &.letter_green {
+                background-color: green;
+            }
+
+            &.letter_yellow {
+                background-color: yellow;
+            }
+
+            &.letter_grey {
+                background-color: grey;
+            }
         }
     }
 }
