--- a/src/App.scss
+++ b/src/App.scss
@@ -87,12 +87,9 @@ body {
 
         animation: shake .5s linear alternate-reverse;
     }
-}
-
-.green {
-    position: relative;
 
     &.flip {
+        position: relative;
 
         &::before {
             content: '';
@@ -107,37 +104,16 @@ body {
             @keyframes flip {
                 0% {
                     opacity: 0;
+                    background-color: rgb(31, 31, 31);
                 }
 
-                100% {
-                    opacity: 1;
-                    rotate: x 180deg;
-                }
-            }
-
-            animation: flip 1s ease;
-            background-color: green;
-        }
-    }
-}
-
-.yellow {
-    position: relative;
-
-    &.flip {
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 2;
-
-            @keyframes flip {
-                0% {
+                25% {
                     opacity: 0;
+                    background-color: rgb(37, 37, 37);
+                }
+
+                50% {
+                    opacity: 1;
                 }
 
                 100% {
@@ -145,44 +121,28 @@ body {
                     rotate: x 180deg;
                 }
             }
-
-            animation: flip 1s ease;
-            background-color: yellow;
+            animation: flip 1s ease-in-out 2s;
         }
-    }
-}
 
-.grey {
-    position: relative;
-
-    &.flip {
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 2;
-
-            @keyframes flip {
-                0% {
-                    opacity: 0;
-                }
-
-                100% {
-                    opacity: 1;
-                    rotate: x 180deg;
-                }
+        &.green {
+            &::before {
+                background-color: green;
             }
+        }
 
-            animation: flip 1s ease 0s;
-            background-color: grey;
+        &.yellow {
+            &::before {
+                background-color: yellow;
+            }
+        }
+
+        &.grey {
+            &::before {
+                background-color: grey;
+            }
         }
     }
 }
-
 
 .keyboard_container {
     display: flex;
@@ -214,6 +174,25 @@ body {
             &.letter_grey {
                 background-color: grey;
             }
+
+            &.highlight {
+                @keyframes scaleUpAndDown {
+                    0% {
+                        scale: 1;
+                    }
+
+                    50% {
+                        scale: 1.1;
+                        background-color: rgb(178, 226, 107);
+                    }
+
+                    100% {
+                        scale: 1;
+                    }
+                }
+
+                animation: scaleUpAndDown 1s ease-in-out 0s alternate-reverse infinite;
+            }
         }
     }
 }
@@ -221,4 +200,36 @@ body {
 
 .game_settings_container {
     display: none;
+}
+
+.notification_container {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    padding: 1rem;
+    background-color: white;
+    color: black;
+    width: fit-content;
+    z-index: 4;
+
+    @keyframes popInAndOut {
+        0% {
+            opacity: .25;
+        }
+
+        25% {
+            opacity: 1;
+        }
+
+        75% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 1;
+        }
+    }
+
+    animation: popInAndOut 3s ease 0s;
+    animation-fill-mode: forwards;
 }
