--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,9 @@ body {
     --tile-correct-color: #538d4e;
     --tile-present-color: #b59f3b;
     --tile-wrong-color: #3a3a3c;
+    --keyboard-letter-tile-bg-color: #818384;
     --keyboard-letter-highlight-color: #5c8d78;
-    --app-background-color: #121213;
+    --app-bg-color: #121213;
 }
 
 
@@ -30,7 +31,7 @@ body {
     justify-content: space-evenly;
     //gap: .3rem;
     color: white;
-    background-color: var(--app-background-color);
+    background-color: var(--app-bg-color);
 }
 
 .gameboard_container {
@@ -55,8 +56,8 @@ body {
     justify-content: center;
     text-transform: uppercase;
     font-size: 2rem;
-    font-weight: bold;
     border: .05rem solid rgb(112, 112, 112);
+    font-weight: bold;
 
     .letter {
         z-index: 3;
@@ -133,20 +134,23 @@ body {
         }
 
         &.green {
+            border: none;
             &::before {
                 background-color: var(--tile-correct-color);
             }
         }
 
         &.yellow {
+            border: none;
             &::before {
                 background-color: var(--tile-present-color);
             }
         }
 
         &.grey {
+            border: none;
             &::before {
-                background-color: var(--tile-incorrect-color);
+                background-color: var(--tile-wrong-color);
             }
         }
     }
@@ -160,30 +164,78 @@ body {
 
     .keyboard_row {
         display: flex;
+        align-items: center;
         gap: .4rem;
 
-        p {
+        .keyboard_letter_tile {
             margin: 0;
             padding: 1.15rem 1rem;
-            background-color: rgb(206, 206, 206);
+            width: 2.75rem;
+            background-color: var(--keyboard-letter-tile-bg-color);
             border-radius: .25rem;
             text-transform: uppercase;
             font-size: 1rem;
             cursor: pointer;
+            //transition: all 1s ease-in-out;
+            position: relative;
 
-            &.letter_green {
+            .keyboard_letter_text {
+                margin: 0;
+            }
+
+            &.keyboard_letter_tile_green, &.keyboard_letter_tile_yellow, &.keyboard_letter_tile_grey {
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 2;
+                    border-radius: .25rem;
+                    background-color: inherit;
+        
+                    @keyframes flip {
+                        0% {
+                            opacity: 0;
+                            background-color: rgb(206, 206, 206);
+                        }
+        
+                        25% {
+                            opacity: 0;
+                            background-color: rgb(183, 183, 183);
+                        }
+        
+                        50% {
+                            opacity: 1;
+                        }
+        
+                        100% {
+                            opacity: 1;
+                            rotate: x 180deg;
+                        }
+                    }
+                    animation: flip 1s ease-in-out;
+                }
+            }
+
+            &.keyboard_letter_tile_green {
                 background-color: var(--tile-correct-color);
             }
 
-            &.letter_yellow {
+            &.keyboard_letter_tile_yellow {
                 background-color: var(--tile-present-color);
             }
 
-            &.letter_grey {
-                background-color: var(--tile-incorrect-color);
+            &.keyboard_letter_tile_grey {
+                background-color: var(--tile-wrong-color);
             }
 
-            &.highlight {
+            &.keyboard_letter_tile_special {
+                width: fit-content;
+            }
+
+            &.keyboard_letter_tile_highlight {
                 @keyframes scaleUpAndDown {
                     0% {
                         scale: 1;
