--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -9,6 +9,7 @@
 
     .navbar_menu_container {
         font-size: 1.4rem;
+        cursor: pointer;
     }
 
     .navbar_title {
@@ -17,7 +18,8 @@
         font-weight: bolder;
         font-family: 'Volkhov', serif;
         letter-spacing: -.15rem;
-        text-indent: 4.4rem;
+        margin-left: 4.4rem;
+        cursor: pointer;
     }
 
     .navbar_icons_container {
@@ -26,6 +28,10 @@
         width: fit-content;
         gap: 1rem;
         font-size: 1.75rem;
+
+        .navbar_icon_container {
+            cursor: pointer;
+        }
     }
 }
 
